--- a/templates/mk3_card.html
+++ b/templates/mk3_card.html
@@ -1,5 +1,5 @@
 <div class="card" style="padding:10px">
-<img src="http://via.placeholder.com/1280x720" class="card-img-top" alt="...">
+<!-- <img src="http://via.placeholder.com/1280x720" class="card-img-top" alt="..."> -->
 <div class="card-title">
 <span class="h2">{{ printer.nickname }}</span>
 
@@ -8,9 +8,9 @@
    <span class="badge text-bg-success">{{ printer.state }}</span>
 </div>
     <div>
-        <span class="h6">Nozzle: {{ printer.nozzleTempActual }}</span>
+        <span class="h6">Nozzle: {{ printer.nozzleTempActual }}°C</span>
         <span class="vr mx-2"></span>
-        <span class="h6">Bed: {{ printer.bedTempActual }}</span>
+        <span class="h6">Bed: {{ printer.bedTempActual }}°C</span>
     </div>
     <hr>
 {% if printer.printing %}
@@ -26,23 +26,40 @@
     <div class="progress-bar text-bg-{{color}} progress-bar-striped {{bar}}" style="width: {{ printer.progress }}%"></div>
 </div>
 <hr>
-<span>
-    <button type="button" class="btn btn-warning">Pause Print</button>
-    <button type="button" class="btn btn-danger">Stop Print</button>
-</span>
-{% else %}
-<div class="mb-3">
-  <label for="example-file-input-1" class="form-label">Upload Print Job:</label>
-  <input class="form-control" type="file" id="example-file-input-1">
-</div>
-<hr>
-<span>
-    {% if printer.nozzleTempTarget > 0 or printer.bedTempTarget > 0 %}
-    <button type="button" class="btn btn-info d-block w-100">Cooldown</button>
+<div style="display:flex">
+    {% if printer.paused%}
+    <form action="/resume" method="post">
+    <input type="hidden" name="printer" value="{{ printer.nickname }}">
+    <button type="submit" class="btn btn-success">Resume Print</button>
+    </form>
     {% else %}
-    <button type="button" class="btn btn-danger d-block w-100">Preheat PLA</button>
+    <form action="/pause" method="post">
+    <input type="hidden" name="printer" value="{{ printer.nickname }}">
+    <button type="submit" class="btn btn-warning">Pause Print</button>
+    </form>
     {% endif %}
-</span>
-{% endif %}
+    <form action="/stop" method="post">
+    <input type="hidden" name="printer" value="{{ printer.nickname }}">
+    <button type="submit" class="btn btn-danger">Stop Print</button>
+    </form>
+</div>
+{% else %}
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#submit-print">
+  Submit Print Job
+</button>
+<div style="padding-top: 10px">
+{% include "print_modal.html" %}
 
+    {% if printer.nozzleTempTarget > 0 or printer.bedTempTarget > 0 %}
+    <form action="/cooldown" method="post">
+    <input type="hidden" name="printer" value="{{ printer.nickname }}">
+    <button type="submit" class="btn btn-info d-block w-100">Cooldown</button>
+    </form>
+    {% else %}
+    <form action="/heat" method="post">
+    <input type="hidden" name="printer" value="{{ printer.nickname }}">
+    <button type="submit" class="btn btn-danger d-block w-100">Preheat PLA</button>
+    </form>
+    {% endif %}
+{% endif %}
 </div>
