--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,32 +9,36 @@
     <div class="collapse navbar-collapse" id="navbar-collapse-1">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Print History</a>
+          <a class="nav-link disabled" aria-current="page" href="#">Print History</a>
         </li>
+        {% if role == "developer" %}
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Developer Tools
           </a>
           <ul class="dropdown-menu mt-lg-2 rounded-top-0">
-            <li><a class="dropdown-item" href="#">Debugger</a></li>
-            <li><a class="dropdown-item" href="#">Port Scanning</a></li>
+            <li><a class="dropdown-item" href="/debug">Debugger</a></li>
+            <li><a class="dropdown-item" href="/dev/scan">Port Scanning</a></li>
           </ul>
         </li>
+        {% endif %}
+        {% if role == "developer" or role == "manager" %}
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Manager Tools
           </a>
           <ul class="dropdown-menu mt-lg-2 rounded-top-0">
-            <li><a class="dropdown-item" href="#">Manage Users</a></li>
+            <li><a class="dropdown-item" href="/account">Manage Users</a></li>
           </ul>
         </li>
+        {% endif %}
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Manage Account
           </a>
           <ul class="dropdown-menu mt-lg-2 rounded-top-0">
-            <li><a class="dropdown-item" href="#">Change Name</a></li>
-            <li><a class="dropdown-item" href="#">Reset Password</a></li>
+            <li><a class="dropdown-item disabled" href="#">Change Name</a></li>
+            <li><a class="dropdown-item" href="/account/reset">Reset Password</a></li>
           </ul>
         </li>
       </ul>
