--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -11,6 +11,13 @@
 {% include "navbar.html" %}
 
 <div class="container-lg">
+{% if request.args.get('txt') != None %}
+<div class="alert alert-{{request.args.get('color')}} fade show" style="margin-top:10px" role="alert">
+{{ request.args.get('txt') }}
+<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+{% endif %}
+    <!--
 {% for notification in notifications %}
     {% if notification.target == "all" or notification.target == currentUser %}
     {% if notification.userDisabled %}
@@ -24,6 +31,7 @@
     </div>
     {% endif %}
 {% endfor %}
+-->
   <h1>Printer Dashboard</h1>
   <div class="row">
     {% for printer in printers %}
