--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -34,11 +34,31 @@
 -->
   <h1>Printer Dashboard</h1>
   <div class="row">
+    {% if printers|length == 0 and mk4_printers|length == 0 %}
+    <div class="card">
+    <div class="card-body">
+    <h5 class="card-title">No Printers Available!</h5>
+    <h6 class="card-subtitle mb-2 text-body-secondary">The print interface is unable to print on any printers</h6>
+    <p class="card-text">
+    This can be for a few reasons, and it is a quick fix. For those with developer permissions, please check the debugging page for more information. This may also be because the device IP has changed, consider a port scan to locate them. Otherwise, ensure the printer cables are connected to the computers and they are connected to ethernet.
+    </p>
+    <a href="/debug" class="card-link">Debugging Page</a>
+    <a href="/dev/scan" class="card-link">Port Scan</a>
+  </div>
+</div>
+    {% else %}
     {% for printer in printers %}
     <div class="col-7 col-sm-4" style="padding:10px">{% include "mk3_card.html" %}</div>
     {% endfor %}
+    {% for printer in mk4_printers %}
+    <div class="col-7 col-sm-4" style="padding:10px">{% include "mk4_card.html" %}</div>
+    {% endfor %}
+    {% endif %}
   </div>
 </div>
+<footer>
+{% include "footer.html" %}
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha256-CDOy6cOibCWEdsRiZuaHf8dSGGJRYuBGC+mjoJimHGw=" crossorigin="anonymous"></script>
 </body>
 </html>
