--- a/templates/portscan.html
+++ b/templates/portscan.html
@@ -39,6 +39,9 @@
 </form>
 {% endif %}
 </div>
+<footer>
+{% include "footer.html" %}
+</footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha256-CDOy6cOibCWEdsRiZuaHf8dSGGJRYuBGC+mjoJimHGw=" crossorigin="anonymous"></script>
 </html>
