--- a/templates/401.html
+++ b/templates/401.html
@@ -8,14 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/halfmoon@2.0.2/css/cores/halfmoon.modern.css" rel="stylesheet" integrity="sha256-DD6elX+jPmbFYPsGvzodUv2+9FHkxHlVtQi0/RJVULs=" crossorigin="anonymous">
 </head>
 <body>
-{% include "navbar.html" %}
 <div class="container-md w-50">
   <div class="card">
     <div class="card-body">
-    <h5 class="card-title">401: Forbidden</h5>
+    <h5 class="card-title">401: Unauthorized</h5>
     <h6 class="card-subtitle mb-2 text-body-secondary">You do not have access to this content</h6>
     <p class="card-text">
-    It appears you do not have proper permissions to access this content. This is often because they are either pages that can disrupt the normal function of the site, or are just not necessary for everyone. <strong>If you believe this to be an error, consult a lead</strong>
+    It appears you haven't logged in and therefore cannot access this content
     </p>
     </div>
   </div>
