--- a/templates/403.html
+++ b/templates/403.html
@@ -2,26 +2,23 @@
 <html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
-    <title>Content Not Found</title>
+    <title>Forbidden</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/halfmoon@2.0.2/css/halfmoon.min.css" rel="stylesheet" integrity="sha256-RjeFzczeuZHCyS+Gvz+kleETzBF/o84ZRHukze/yv6o=" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/halfmoon@2.0.2/css/cores/halfmoon.modern.css" rel="stylesheet" integrity="sha256-DD6elX+jPmbFYPsGvzodUv2+9FHkxHlVtQi0/RJVULs=" crossorigin="anonymous">
 </head>
 <body>
 {% include "navbar.html" %}
-<div class="container-md">
-  <div class="container-md w-50">
+<div class="container-md w-50">
   <div class="card">
     <div class="card-body">
-    <h5 class="card-title">404: Not found</h5>
-    <h6 class="card-subtitle mb-2 text-body-secondary">The content you requested was not found</h6>
+    <h5 class="card-title">403: Forbidden</h5>
+    <h6 class="card-subtitle mb-2 text-body-secondary">You do not have access to this content</h6>
     <p class="card-text">
-    The content at this address could not be found, this is likely because it does not exist.
+    It appears you do not have proper permissions to access this content. This is often because they are either pages that can disrupt the normal function of the site, or are just not necessary for everyone. <strong>If you believe this to be an error, consult a lead</strong>
     </p>
-    <a href="/" class="card-link">Return home</a>
     </div>
   </div>
-</div>
 </div>
 <footer>
 {% include "footer.html" %}
