--- a/templates/manage-accounts.html
+++ b/templates/manage-accounts.html
@@ -2,26 +2,21 @@
 <html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
-    <title>Content Not Found</title>
+    <title>Manage Accounts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/halfmoon@2.0.2/css/halfmoon.min.css" rel="stylesheet" integrity="sha256-RjeFzczeuZHCyS+Gvz+kleETzBF/o84ZRHukze/yv6o=" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/halfmoon@2.0.2/css/cores/halfmoon.modern.css" rel="stylesheet" integrity="sha256-DD6elX+jPmbFYPsGvzodUv2+9FHkxHlVtQi0/RJVULs=" crossorigin="anonymous">
 </head>
 <body>
 {% include "navbar.html" %}
-<div class="container-md">
-  <div class="container-md w-50">
-  <div class="card">
-    <div class="card-body">
-    <h5 class="card-title">404: Not found</h5>
-    <h6 class="card-subtitle mb-2 text-body-secondary">The content you requested was not found</h6>
-    <p class="card-text">
-    The content at this address could not be found, this is likely because it does not exist.
-    </p>
-    <a href="/" class="card-link">Return home</a>
+<div class="container-lg">
+    <div class="row row-cols-3">
+      {% for account in accounts %}
+      <div class="col">
+      {% include "manage-account-card.html" %}
+      </div>
+      {% endfor %}
     </div>
-  </div>
-</div>
 </div>
 <footer>
 {% include "footer.html" %}
