Print modal corrected

--- a/templates/mk3_card.html
+++ b/templates/mk3_card.html
@@ -54,7 +54,7 @@
     </form>
 </div>
 {% else %}
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#determine-path">
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#determine-path-{{printer.prefix}}">
   Submit Print Job
 </button>
 <div style="padding-top: 10px">
