Added proper job titles (w/ regex filtering to only include relevant data), added silly ICO

--- a/templates/mk3_card.html
+++ b/templates/mk3_card.html
@@ -24,7 +24,7 @@
     </div>
     <hr>
 {% if printer.printing %}
-<!-- <h5 style="padding-top:10px">Job title by User</h5> -->
+<h5 style="padding-top:10px">{{printer.jobTitle | pretty_print_name}} </h5>
 {% if printer.state == "Paused" %}
 {% set color = "warning" %}
 {% set bar = "progress-bar" %}
